webapp-example-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapp-svc
  name: webapp-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 5000
  selector:
    app: webapp
