webapp-example-1/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: training-api
  labels:
    app: webapp
spec:
  rules:
  - host: web.minikube.local
    http:
      paths:
      - backend:
          serviceName: webapp-svc
          servicePort: 8080
